--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,3 +1,69 @@
-body 
-    background: red
+@use 'variables'
+@use 'mixins'
 
+:root 
+    font-size: 0.625rem
+
+*
+    font-family: 'Josefin Sans'
+    padding: 0
+    margin: 0
+    box-sizing: border-box
+    
+
+ul 
+    list-style: none
+
+input
+    border: none
+
+.container
+    @include mixins.container(1440px)
+    @include mixins.bg-img('bg-desktop-light.jpg')
+    background-color: variables.$very-light-grayish-blue 
+    height: 30rem
+    padding: 2rem
+
+    header 
+        @include mixins.container(320px)
+        margin: 0 auto
+        padding-top: 7.4rem
+        display: flex
+        justify-content: space-between
+        align-items: center
+        
+        h1 
+            text-transform: uppercase
+            letter-spacing: 1.6rem
+            font-size: 3.2rem
+            color: variables.$very-light-gray
+        img
+            width: 3rem
+            cursor: pointer
+            
+.todo 
+    @include mixins.container(320px)
+    margin: 0 auto
+    padding-top: 4.8rem
+    form
+        position: relative
+        &::before
+            content: ""
+            display: block
+            width: 20px
+            height: 20px
+            position: absolute
+            border-radius: 50%
+            border: 2px solid variables.$very-light-grayish-blue
+            top: 10px
+            left: 16px
+    &-input
+        display: block
+        width: 100%
+        padding: 1.6rem 1.6rem 1.6rem 5.2rem
+        border-radius: 2px
+        &::placeholder
+            color: variables.$dark-grayish-blue
+        
+            
+            
