--- a/src/sass/_mixins.sass
+++ b/src/sass/_mixins.sass
@@ -9,3 +9,20 @@
 @mixin container($value)
     max-width: $value
     
+
+
+@mixin flex()
+    display: flex
+    align-items: center
+
+@mixin checkbox()
+    content: ""
+    display: block
+    width: 20px
+    height: 20px
+    position: absolute
+    border-radius: 50%
+    border: 2px solid variables.$very-light-grayish-blue
+    top: 12px
+    left: 13px
+
